<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/document_header">

        <EditTextPreference
            app:key="prefix"
            app:title="@string/prefix_title"
            app:defaultValue="@string/prefix_default"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="high_quality"
            app:entries="@array/quality_entries"
            app:entryValues="@array/quality_values"
            app:key="quality"
            app:title="@string/quality_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/theme">

        <ListPreference
            id="@+id/themeListPreference"
            app:defaultValue="high_quality"
            app:entries="@array/theme_entries"
            app:entryValues="@array/theme_values"
            app:key="theme"
            app:title="@string/theme_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>